<resources>
    <string name="app_name">CurriculoDev</string>

    <string name="txtName">Name:</string>
    <string name="txtNameHint">Enter your name</string>
    <string name="txtAge">Age:</string>
    <string name="txtAgeHint">Enter your age</string>
    <string name="txtGender">Gender</string>
    <string name="txtLinkedin">Linkedin</string>
    <string name="txtLinkedinHint">Enter your Linkedin profile</string>
    <string name="txtBtn">Save</string>
    <string name="txtLanguage">What Programming Languages do you know?</string>
    <string name="txtGit">GitHub</string>
    <string name="txtGitHint">Enter your GitHub repository</string>

    <!-- <string-array name="gender">
        <item>Select your gender...</item>
        <item>Female</item>
        <item>Male"</item>
        <item>Other</item>
        <item>I don't want to talk</item>
    </string-array> -->

</resources>